# drogueroids

./: .gitignore  README.md  build.js  demo.html  demo.js  game.html  index-docinfo-footer.html  index.adoc  index.html  package-lock.json  package.json
.github/workflows/: deploy.yaml
firmware/: .gitignore  Cargo.toml  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/app/: Cargo.toml  README.adoc
firmware/app/src/: main.rs
firmware/bootloader/: Cargo.toml
firmware/bootloader/src/: main.rs
firmware/src/: main.rs
js/: ble.js  game.js  publish.js
plugins/ble/: index.js  style.css
