[package]
authors = [
    "Ulf Lilleengen <lulf@redhat.com>",
    "Bob McWhirter <bmcwhirt@redhat.com>"
]
edition = "2018"
name = "microbit-ble"
version = "0.1.0"
description = "Microbit BLE Sensor example with DFU"
keywords = ["nrf52833", "nrf", "nrf52", "microbit", "dfu", "bootloader", "ble"]
resolver = "2"

[dependencies]
defmt = { version = "0.3" }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }
panic-reset = { version = "0.1.1", optional = true }
static_cell = "1"

drogue-device = { version = "0.1.0", default-features = false, features = ["time", "ble+nrf52833", "ble+nrf-softdevice-s113", "dfu"] }
microbit-bsp = { version = "0.1.0" }
lsm303agr = "0.2.2"

embassy-boot-nrf = { version = "0.1.0", default-features = false, features = ["softdevice"] }
embassy-executor = { version = "0.1.0", default-features = false, features = ["integrated-timers"] }
embassy-time = { version = "0.1.0", default-features = false }
embassy-sync = { version = "0.1.0", default-features = false }
embassy-futures = { version = "0.1.0", default-features = false }
embassy-nrf = { version = "0.1.0", default-features = false, features = ["nrf52833", "gpiote", "time-driver-rtc1"]}
embedded-hal-async = { version = "=0.1.0-alpha.1" }

cortex-m = { version = "0.7" }
cortex-m-rt = "0.7"
heapless = "0.7"
futures     = { version = "0.3.17", default-features = false, features = ["async-await"] }

nrf-softdevice = { version = "0.1.0", features = ["ble-peripheral", "ble-gatt-server", "s113", "nrf52833", "critical-section-impl"] }
nrf-softdevice-s113 = { version = "0.1.0" }
defmt-rtt = { version = "0.3.2", optional = true }

[features]
default = [
    "panic-reset"
]
debug = [
    "panic-probe",
    "drogue-device/defmt",
    "nrf-softdevice/defmt",
    "embassy-executor/defmt",
    "embassy-nrf/defmt",
    "embassy-boot-nrf/defmt",
    "defmt-rtt",
]
