[package]
authors = [
    "Ulf Lilleengen <lulf@redhat.com>",
    "Bob McWhirter <bmcwhirt@redhat.com>"
]
edition = "2018"
name = "microbit-bootloader"
version = "0.1.0"
description = "Bootloader for BBC Micro:bit chips"

[dependencies]
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.3", optional = true }
static_cell = "1"
embassy-nrf = { version = "0.1.0", default-features = false, features = ["nightly", "nrf52833"] }
embassy-boot = { version = "0.1.0", default-features = false }
embassy-boot-nrf = { version = "0.1.0", default-features = false, features = ["softdevice"] }
nrf-softdevice-mbr = { version = "0.1.0", git = "https://github.com/embassy-rs/nrf-softdevice.git", branch = "master" }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7" }
embedded-storage = "0.3.0"
embedded-storage-async = "0.3.0"
cfg-if = "1.0.0"

[features]
defmt = [
    "dep:defmt",
    "embassy-boot/defmt",
    "embassy-boot-nrf/defmt",
    "embassy-nrf/defmt",
]
debug = ["defmt-rtt"]
